--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,30 +1,44 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="UTF-8">
-    <title>
-        {% block title %}Welcome!
-        {% endblock %}
-    </title>
-    {% block stylesheet %}
-    <link rel="icon"
-        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-    <link rel="stylesheet" href="{{ asset('css/style.css') }}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /></head>
-    {% endblock %}
-<header>
-    <nav>
-        <ul>
-            <li><i class="fa-solid fa-lock"></i><a href="{{ path('app_dashboard')}}">Dashboard</a></li>
-            <li><i class="fa-solid fa-right-to-bracket"></i><a href="{{ path('app_login')}}">Login</a></li>
-        </ul>
-    </nav>
-</header>
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
+		{% block stylesheet %}
+			<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+			<link rel="stylesheet" href="{{ asset('css/style.css') }}">
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer"/></head>
+	{% endblock %}
+	<header>
+		<nav>
+			<ul>
+				{% if app.user %}
 
-<body>
-    {% block body %}
-    {% endblock %}
-</body>
-
+					{% if is_granted('ROLE_ADMIN') %}
+						<li>
+							<i class="fa-solid fa-lock"></i>
+							<a href="{{ path('admin')}}">Dashboard</a>
+						</li>
+					{% endif %}
+					{% if is_granted('ROLE_USER') %}
+						<li>
+							<a class="btn2" href="{{ path('app_logout') }}">Logout</a>
+						</li>
+					{% endif %}
+				{% else %}
+					<li>
+						<i class="fa-solid fa-right-to-bracket"></i>
+						<a href="{{ path('app_login')}}">Login</a>
+					</li>
+				{% endif %}
+			</ul>
+		</nav>
+	</header>
+	<body>
+		{% block body %}{% endblock %}
+	</body>
 </html>
+
