--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,19 +3,24 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
+<div class="container">
     {% for flash_error in app.flashes('verify_email_error') %}
-        <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
+    <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
 
     <h1>Register</h1>
 
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
-
-        <button type="submit" class="btn">Register</button>
+    {{ form_row(registrationForm.email) }}
+    {{ form_row(registrationForm.plainPassword, {
+    label: 'Password'
+    }) }}
+    <div>
+        <label>
+            {{ form_row(registrationForm.agreeTerms) }}
+        </label>
+    </div>
+    <button type="submit" class="btn">Register</button>
     {{ form_end(registrationForm) }}
+</div>
 {% endblock %}
