--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -3,6 +3,8 @@
 {% block title %}Reset your password{% endblock %}
 
 {% block body %}
+<div class="container">
+
     {% for flash_error in app.flashes('reset_password_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
@@ -17,6 +19,7 @@
             </small>
         </div>
 
-        <button class="btn btn-primary">Send password reset email</button>
+        <button type="submit">Send password reset email</button>
     {{ form_end(requestForm) }}
+</div>
 {% endblock %}
