--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,11 +16,10 @@
 		<nav>
 			<ul>
 				{% if app.user %}
-
 					{% if is_granted('ROLE_ADMIN') %}
 						<li>
 							<i class="fa-solid fa-lock"></i>
-							<a href="{{ path('admin')}}">Dashboard</a>
+							<a href="{{ path('admin')}}">Admin Dash</a>
 						</li>
 						<li>
 							<i class="fa-solid fa-user"></i>
