--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,6 +21,7 @@ nav {
     height: 100px;
     background-color: #ffffff;
 }
+
 ul {
     font-size: large;
     list-style: none;
@@ -35,6 +36,10 @@ a {
     text-decoration: none;
     color: #333;
     padding: 10px;
+}
+
+p {
+    font-size: 20px;
 }
 
 .container {
@@ -72,6 +77,17 @@ button[type="submit"] {
     cursor: pointer;
     width: 100%;
 }
+
+input[type="submit"] {
+    background-color: #5900be;
+    color: #FFF;
+    padding: 15px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    width: 100%;
+}
+
 button[type="submit"]:hover {
     background-color: #4d00a5;
 }
