erreur de frappe

--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -10,7 +10,7 @@
 		<article>
 			<p>Une fois l'utilisateur connecté, il a accès a cette page. Il a également accès a l'onglet profil ! On peut imaginer qu'il pourra y modifier ces informations (email et mot de passe en l'occurence).</p>
 			    <br>
-			<p>Etant donné que qu'un utilisateur n'a pas le [ROLE_ADMIN], il ne pourra pas accèder au /register ni au /admin, qui contient le dashboard.
+			<p>Etant donné qu'un utilisateur n'a pas le [ROLE_ADMIN], il ne pourra pas accèder au /register ni au /admin, qui contient le dashboard.
 			</p>
                 <br>
             <p>Fonctionnalités du site: </p>
