--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=League+Spartan&display=swap');
 
-*{
+* {
     margin: 0 auto;
     padding: 0 auto;
 }
 
-header{
+header {
     padding-bottom: 10em;
 }
 
@@ -29,9 +29,11 @@ ul {
     padding: 0;
     display: flex;
 }
+
 li {
     margin: 0 10px;
 }
+
 a {
     text-decoration: none;
     color: #333;
@@ -56,11 +58,15 @@ h1 {
     margin-top: 0px;
     margin-bottom: 1em;
 }
+
 label {
     display: block;
     margin-bottom: 8px;
 }
-input[type="text"], input[type="password"],input[type="email"] {
+
+input[type="text"],
+input[type="password"],
+input[type="email"] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -68,6 +74,7 @@ input[type="text"], input[type="password"],input[type="email"] {
     border: 2px solid #ccc;
     border-radius: 4px;
 }
+
 button[type="submit"] {
     background-color: #5900be;
     color: #FFF;
@@ -92,7 +99,42 @@ button[type="submit"]:hover {
     background-color: #4d00a5;
 }
 
-.forgot{
+.forgot {
     padding-top: 1em;
     text-align: center;
 }
+
+/* Media queries */
+@media screen and (max-width: 768px) {
+    nav {
+      height: 50px;
+    }
+    
+    ul {
+      font-size: medium;
+    }
+    
+    .container {
+      max-width: 90%;
+      padding: 15px;
+    }
+  }
+  
+  @media screen and (max-width: 480px) {
+    header {
+      padding-bottom: 3em;
+    }
+    
+    nav {
+      height: 40px;
+    }
+    
+    ul {
+      font-size: small;
+    }
+    
+    .container {
+      max-width: 90%;
+      padding: 10px;
+    }
+  }
